--- a/shAkalam/aitareya-brAhmaNam/sAyaNaH/4/18.md
+++ b/shAkalam/aitareya-brAhmaNam/sAyaNaH/4/18.md
@@ -458,7 +458,7 @@ Memorial Collection तदेतत्पशंसति
 
 सहावानं तरुतारं स्थानामित्येष वै सहा 
 
-वांस्तरुतैष हीमाल्लोकान्सद्यस्तरति , इति । पुनरपि कीहर्श तायम् । सहावानं सहाः सहनं सर्वा(पी)दीनामभिभवस्तद. न्तम् । रथानां तरुतारमुल्लङ्घायितारम् । एष ताक्ष्य एवास्मिन्पादेऽभिहितः। सहावानभिभवक्षमः । तरुतोल्लङ्घयिता भवति । यस्मादेष इमाँल्लोकान्सयस्त दानीमेव तरितुं क्षमः। 
+वांस्तरुतैष हीमाल्लोकान्सद्यस्तरति , इति । पुनरपि कीहर्श तायम् । सहावानं सहाः सहनं सर्वा(पी)दीनामभिभवस्तद. न्तम् । रथानां तरुतारमुल्लङ्घायितारम् । एष ताक्ष्य एवास्मिन्पादेऽभिहितः। सहावानभिभवक्षमः । तरुतोल्लङ्घयिता भवति । यस्मादेष इमाल्ँलोकान्सयस्त दानीमेव तरितुं क्षमः। 
 
 तृतीयपादमनूध व्याचष्टे 
 
@@ -534,7 +534,7 @@ Memorial Collection तदेतत्पशंसति
 
 आरोहप्रकारविशेषं विधाय प्रत्यवरोहणं विधत्ते 
 
-त्रिपद्या प्रत्यवरोहति यथा शाखां धारयमा णस्तदमुष्मिँल्लोके प्रतितिष्ठत्यर्धर्चशोऽन्तरिक्ष पच्छोऽस्मिँल्लोक आप्त्वैव तत्स्वर्ग लोकं 
+त्रिपद्या प्रत्यवरोहति यथा शाखां धारयमा णस्तदमुष्मिल्ँलोके प्रतितिष्ठत्यर्धर्चशोऽन्तरिक्ष पच्छोऽस्मिल्ँलोक आप्त्वैव तत्स्वर्ग लोकं 
 
 यजमाना अस्मॅिल्लोके प्रतितिष्ठन्ति, इति । प्रत्यवरोहक्रमे प्रथमावृत्तौ पादत्रयेऽवसानं द्वितीयावृत्तावर्धऽवसानं तृती यावृत्तौ पादेऽवसानम् । तथा सति यथा लोके वृक्षाग्रमारुह्य पुरुषः प्रत्यवरो हन्हस्तेन शाखां दृढमवलम्ब्य स्थिरो भवति, एवमयं प्रथमतः स्वर्गे प्रतिष्ठाय पश्चादन्तरिक्षे भूलोके च प्रतितिष्ठति । यथा होतुः प्रतिष्ठा तथा यजमानाना. मपि । स्वर्ग पाप्य पुनरागत्यास्मिल्लोके प्रतितिष्ठन्ति । तावतावारोहप्रत्यव रोहौ हंसवतीपक्षे तायपक्षेऽपि समानौ । एवमुच्चारणस्य दुःशकत्वादस्य शंसनस्य दूरोहणसंज्ञा। 
 
