--- a/shAkalam/aitareya-brAhmaNam/sAyaNaH/4/19.md
+++ b/shAkalam/aitareya-brAhmaNam/sAyaNaH/4/19.md
@@ -76,7 +76,7 @@ title = "१९"
 
 यथोक्तदीक्षोपसेत्सुत्यादिनसंख्याः प्रशंसति 
 
-पत्रिंशदहो वा एष यद्दादशाहः पत्रिंशद क्षरा वै बृहती बृहत्या वा एतदयनं यद्दाद शाहो बृहत्या वै देवा इमाल्लोकानाश्नु वत ते वै दशभिरेवाक्षरैरिमं लोकमाश्नुवत दशभिरन्तरिक्षं दशभिर्दिवं चतुर्भिश्चतस्रो दिशो दाभ्यामेवास्मिँल्लोके प्रत्यतिष्ठन् , इति । यो द्वादशाहोऽस्त्येष पूर्वोक्तरीत्या पत्रिंशदिनात्मकः । बृहतीछन्दश्च षट् त्रिंशदक्षरं तस्माद्यो द्वादशाहोऽस्त्येतबृहत्या अयनं स्थानमित्यर्थः । देवाश्च 
+पत्रिंशदहो वा एष यद्दादशाहः पत्रिंशद क्षरा वै बृहती बृहत्या वा एतदयनं यद्दाद शाहो बृहत्या वै देवा इमाल्लोकानाश्नु वत ते वै दशभिरेवाक्षरैरिमं लोकमाश्नुवत दशभिरन्तरिक्षं दशभिर्दिवं चतुर्भिश्चतस्रो दिशो दाभ्यामेवास्मिल्ँलोके प्रत्यतिष्ठन् , इति । यो द्वादशाहोऽस्त्येष पूर्वोक्तरीत्या पत्रिंशदिनात्मकः । बृहतीछन्दश्च षट् त्रिंशदक्षरं तस्माद्यो द्वादशाहोऽस्त्येतबृहत्या अयनं स्थानमित्यर्थः । देवाश्च 
 
 जयमाप्तिः । चतुभिरक्षरैदिक्चतुष्टयप्राप्तिः। द्वाभ्यामक्षराभ्यामस्मिल्लोके प्रतिष्ठा भाप्ताः । तथाविधबृहतीसाम्यादिनगता षट्त्रिंशत्संख्या प्रशस्ता। . वेदनं प्रशंसति 
 
@@ -90,7 +90,7 @@ title = "१९"
 
 यस्मात्कारणाबृहत्या अन्यान्युत्तराणि पतित्रिष्टुब्जगतीछन्दांस्यतो सरं चतुरक्षराधिकान्यतो वर्षीयांसि । तस्यैव व्याख्यानं भूयोक्षरतराणीति अथैवं सति पतयादीनि च्छदास्युपेक्ष्य कस्मात्कारणादेतां पत्रिंशदक्षरमात्र युक्तां वैदिका बृहतीत्याचक्षत इति चोद्यम् । पूर्वोक्तमेवार्थवादमुपजीव्य परिहारमाह 
 
-एतया हि देवा इमाँल्लोकानाश्नुवत ते वै दशभि वाक्षरैरिमं लोकमाश्नुवत दशभिरन्तरिक्षं दश भिर्दिवं चतुर्भिश्चतस्रो दिशो द्वाभ्यामेवास्मिँ ल्लोके प्रत्यतिष्ठंस्तस्मादेतां बृहतीत्याचक्षते, इति । अक्षरसंख्यान्यूनत्वेऽपि लोकत्रयप्राप्तिहेतुत्वात्प्रौढत्वमभिप्रेत्य बृहतीत्य भिधानम् । 
+एतया हि देवा इमाल्ँलोकानाश्नुवत ते वै दशभि वाक्षरैरिमं लोकमाश्नुवत दशभिरन्तरिक्षं दश भिर्दिवं चतुर्भिश्चतस्रो दिशो द्वाभ्यामेवास्मिँ ल्लोके प्रत्यतिष्ठंस्तस्मादेतां बृहतीत्याचक्षते, इति । अक्षरसंख्यान्यूनत्वेऽपि लोकत्रयप्राप्तिहेतुत्वात्प्रौढत्वमभिप्रेत्य बृहतीत्य भिधानम् । 
 
 उक्तार्थवेदनं प्रशंसति 
 
