--- a/shAkalam/aitareya-brAhmaNam/sAyaNaH/5/25.md
+++ b/shAkalam/aitareya-brAhmaNam/sAyaNaH/5/25.md
@@ -188,7 +188,7 @@ usaw
 
 ईडग्भावनायां फलं दर्शयति 
 
-यह वा अस्य किंच नश्यति यन्मियते यदपाजन्ति सर्व हैवैनं तदमुष्मिँल्लोके यथा बर्हिषि दत्तमागच्छेदेवमागच्छति 
+यह वा अस्य किंच नश्यति यन्मियते यदपाजन्ति सर्व हैवैनं तदमुष्मिल्ँलोके यथा बर्हिषि दत्तमागच्छेदेवमागच्छति 
 
 य एवं विहाननिहोत्रं जुहोति, इति । यः पुमानादित्यो यूप इत्यादिकं विद्वान्भावयन्नमिहोत्रं जुहोति । एनं पुरु षममुष्मिन्वर्गे लोके तत्सर्वमागच्छति। किं किमिति तदुच्यते । अस्य पुरुषस्य यद्ध वै किंचास्मिल्लोके यत्किमपि वस्तु नश्यति । यच्च पुत्रादिकं म्रियते यद प्यन्यदपाजन्ति, अपगच्छति स्वस्माद्वियुक्तं भवति । तत्सर्व प्राप्यते । तत्र दृष्टान्तः । यथा बर्हिषि यज्ञे दत्तं वस्तु स्वर्गे यजमानमागच्छेदेवं नष्टं मृतम पगतं च सर्वमागच्छति । योऽयं श्रद्धाहोमः पूर्वमुक्तस्तस्यैव पुनरपि यूपवे.. धादिभावनारूपमनुष्ठानमुक्तम् । 
 
