--- a/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/gRhyam/sarva-prastutiH/4/07.md
@@ -158,7 +158,7 @@ title = "०७"
 <div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/08_taijasAshmamayamRNmayeShu_t.md">
 <details open><summary><h3>08 तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु ...{Loading}...</h3></summary>
 
-तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाँल्लोकान्प्रीणयाहि नः स्वधा नम इति ८
+तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाल्ँलोकान्प्रीणयाहि नः स्वधा नम इति ८
 </details>
 </div>
 <div class="js_include collapsed" newlevelforh1="4" title="Oldenberg" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/oldenberg/4/07/08_taijasAshmamayamRNmayeShu_t.md">
@@ -173,7 +173,7 @@ And having recited over (that water the verse), 'For luck and help the divine wa
 <div class="js_include collapsed" newlevelforh1="4" title="मूलम्" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/mUlam/4/07/08_taijasAshmamayamRNmayeShu_t.md">
 <details><summary><h4>मूलम् ...{Loading}...</h4></summary>
 
-तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाँल्लोकान्प्रीणयाहि नः स्वधा नम इति ८
+तैजसाश्ममयमृण्मयेषु त्रिषु पात्रेष्वेकद्रव्येषु वा दर्भान्तर्हितेष्वप आसिच्य शन्नो देवीरभिष्टय इत्यनुमन्त्रितासु तिलानावपति तिलोऽसि सोमदेवत्यो गोसवे देवनिर्मितः । प्रत्नवद्भिः प्रत्तः स्वधया पितॄनिमाल्ँलोकान्प्रीणयाहि नः स्वधा नम इति ८
 </details>
 </div>
 <div class="js_include" includetitle="true" newlevelforh1="3" unfilled url="/vedAH_Rk/shAkalam/sUtram/AshvalAyanaH/gRhyam/vishvAsa-prastutiH/4/07/09_prasavyena.md">
