--- a/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/12.md
+++ b/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/12.md
@@ -2328,12 +2328,12 @@ title = "१२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-आख्याय वेतरेषूपहवँल्लीप्सेतः।
+आख्याय वेतरेषूपहवल्ँलीप्सेतः।
 </details>
 
 <details><summary>मूलम्</summary>
 
-आख्याय वेतरेषूपहवँल्लीप्सेतः।
+आख्याय वेतरेषूपहवल्ँलीप्सेतः।
 </details>
 
 <details><summary>टीका</summary>
