--- a/shAkalam/saMhitA/sarva-prastutiH/01/109.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/109.md
@@ -1961,7 +1961,7 @@ Ihr überragt im Schlachtenlärm die Streiter, ihr überragt die Erde und den Hi
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - अन्वयः</summary>
 
-अन्वय:  इन्द्राग्नी अन्या विश्वा भुवना अन्यान् सर्वाँल्लोकान् महित्वा पृतनाहवेषु चर्षणिभ्यः प्रपृथिव्या प्रसिन्धुभ्यः प्रगिरिभ्यः प्रदिवश्च प्रातिरिरिचाथे प्रातिरिक्तौ भवतः ॥ ६ ॥
+अन्वय:  इन्द्राग्नी अन्या विश्वा भुवना अन्यान् सर्वाल्ँलोकान् महित्वा पृतनाहवेषु चर्षणिभ्यः प्रपृथिव्या प्रसिन्धुभ्यः प्रगिरिभ्यः प्रदिवश्च प्रातिरिरिचाथे प्रातिरिक्तौ भवतः ॥ ६ ॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - विषयः</summary>
 
@@ -1973,7 +1973,7 @@ Ihr überragt im Schlachtenlärm die Streiter, ihr überragt die Erde und den Hi
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः। नहि वायुविद्युद्भ्यां सदृशो महान् कश्चिदपि लोको भवितुमर्हति कुत एतौ सर्वाँल्लोकानभिव्याप्य स्थितावतः ॥ ६ ॥
+भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः। नहि वायुविद्युद्भ्यां सदृशो महान् कश्चिदपि लोको भवितुमर्हति कुत एतौ सर्वाल्ँलोकानभिव्याप्य स्थितावतः ॥ ६ ॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
