--- a/shAkalam/saMhitA/sarva-prastutiH/02/011.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/02/011.md
@@ -5998,7 +5998,7 @@ Durch dieses Trita Somatrunk erheitert, warf er herab den Arbuda gekräftigt. Ih
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः । ये राजजना यथा सूर्योऽसङ्ख्याताँल्लोकान् तत्रस्थान्पदार्थान् व्यवस्थापयति वायुप्रेरिता विद्युन्मेघं वर्षयति तथाऽऽचरन्ति ते सर्वतो भद्रमाप्नुवन्ति ॥२०॥
+भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः । ये राजजना यथा सूर्योऽसङ्ख्याताल्ँलोकान् तत्रस्थान्पदार्थान् व्यवस्थापयति वायुप्रेरिता विद्युन्मेघं वर्षयति तथाऽऽचरन्ति ते सर्वतो भद्रमाप्नुवन्ति ॥२०॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
