--- a/shAkalam/saMhitA/sarva-prastutiH/02/015.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/02/015.md
@@ -954,7 +954,7 @@ Wie Bauten mass er aus die Bahnen messend, den Strömen bohrte Rinnen mit dem Bl
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
-पदार्थान्वयभाषाः -  (सद्मेव) गृहमिव (प्राचः) प्राचीनाँल्लोकान् (वि) (मिमाय) मिमीते (मानैः) परिमाणैः (वज्रेण) विज्ञानेन (खानि) खातानि (अतृणत्) सन्तारयति। अत्र व्यत्ययेन श्ना (नदीनाम्) अव्यक्तशब्दयुक्तानां सरिताम् (वृथा) (असृजत्) (पथिभिः) मार्गैः (दीर्घयाथैः) दीर्घा यथा गमनानि येषु तैः (सोमस्य) उत्पद्यमानस्य (ता) तानि (मदे) हर्षे (इन्द्रः) (चकार) करोति ॥३॥
+पदार्थान्वयभाषाः -  (सद्मेव) गृहमिव (प्राचः) प्राचीनाल्ँलोकान् (वि) (मिमाय) मिमीते (मानैः) परिमाणैः (वज्रेण) विज्ञानेन (खानि) खातानि (अतृणत्) सन्तारयति। अत्र व्यत्ययेन श्ना (नदीनाम्) अव्यक्तशब्दयुक्तानां सरिताम् (वृथा) (असृजत्) (पथिभिः) मार्गैः (दीर्घयाथैः) दीर्घा यथा गमनानि येषु तैः (सोमस्य) उत्पद्यमानस्य (ता) तानि (मदे) हर्षे (इन्द्रः) (चकार) करोति ॥३॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
@@ -1631,7 +1631,7 @@ Er bracht' zur Ruh den Strom, der reissend hinschoss, und setzte glücklich unbe
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  यो जगदीश्वरो जगतः स्रष्टा पाता हन्ता मुक्तौ शुद्धाचारान् दुःखात्पारयितास्ति येऽस्मिन् शुद्धे समाधिना निमज्य पवित्रयन्ति ते सर्वत्र प्रतिष्ठाँल्लभन्ते ॥५॥
+भावार्थभाषाः -  यो जगदीश्वरो जगतः स्रष्टा पाता हन्ता मुक्तौ शुद्धाचारान् दुःखात्पारयितास्ति येऽस्मिन् शुद्धे समाधिना निमज्य पवित्रयन्ति ते सर्वत्र प्रतिष्ठाल्ँलभन्ते ॥५॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
