--- a/shAkalam/saMhitA/sarva-prastutiH/02/017.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/02/017.md
@@ -1621,7 +1621,7 @@ Er festigte der Berge Ueberhang mit Kraft, beförderte der Wasser niederstrebend
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः। यथा सूर्यः सन्निहिताँल्लोकान्धरति तथा परमेश्वरः सूर्याद्यखिलं जगद्धत्ते ॥५॥
+भावार्थभाषाः -  अत्र वाचकलुप्तोपमालङ्कारः। यथा सूर्यः सन्निहिताल्ँलोकान्धरति तथा परमेश्वरः सूर्याद्यखिलं जगद्धत्ते ॥५॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
