--- a/shAkalam/saMhitA/sarva-prastutiH/06/054.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/06/054.md
@@ -2385,7 +2385,7 @@ Auch ferner strecke Puschan vor zum Schutze seine rechte Hand, Verlornes treib' 
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  अस्मिँल्लोके यो दाता स एवोत्तमो यो ग्रहीता सोऽधमो यश्च चौर्य्येण प्रापकः स निकृष्टो वर्त्तत इति वेद्यम् ॥१०॥ अत्र विद्वत्सङ्गः शिल्पिप्रशंसोत्तमगुणयाचनं हिंसात्यागो दानप्रशंसा चोक्ता अत एतस्य सूक्तस्य पूर्वसूक्तार्थेन सह सङ्गतिर्वेद्या ॥ इति चतुःपञ्चाशत्तमं सूक्तं विंशो वर्गश्च समाप्तः ॥
+भावार्थभाषाः -  अस्मिल्ँलोके यो दाता स एवोत्तमो यो ग्रहीता सोऽधमो यश्च चौर्य्येण प्रापकः स निकृष्टो वर्त्तत इति वेद्यम् ॥१०॥ अत्र विद्वत्सङ्गः शिल्पिप्रशंसोत्तमगुणयाचनं हिंसात्यागो दानप्रशंसा चोक्ता अत एतस्य सूक्तस्य पूर्वसूक्तार्थेन सह सङ्गतिर्वेद्या ॥ इति चतुःपञ्चाशत्तमं सूक्तं विंशो वर्गश्च समाप्तः ॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
