--- a/shAkalam/saMhitA/sarva-prastutiH/07/065.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/07/065.md
@@ -1116,7 +1116,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-हे **मित्रावरुणा** मित्रावरुणौ **नः** अस्माकं **हव्यजुष्टिं** हविःसेवनवन्तं यज्ञम् **आ** गच्छतमिति शेषः । आगत्य च **इळाभिः** अन्नैः सह **घृतैः** उदकैः **गव्यूतिम्** अस्मदीयां भूमिम् **उक्षतं** सिञ्चतम्। **वां** युवां **प्रति** **अत्र** अस्मिँल्लोके **वरम्** उत्कृष्टं हविः स्तोत्रं वा क **आ** यच्छेदिति शेषः । अतः केवलं कृपयैव **दिव्यस्य** दिवि भवस्य **चारोः** चरणीयस्थ उद्नः उदकस्य । कर्मणि षष्ठी । उक्तलक्षणमुदकं **पृणीतं** प्रयच्छतम् ॥
+हे **मित्रावरुणा** मित्रावरुणौ **नः** अस्माकं **हव्यजुष्टिं** हविःसेवनवन्तं यज्ञम् **आ** गच्छतमिति शेषः । आगत्य च **इळाभिः** अन्नैः सह **घृतैः** उदकैः **गव्यूतिम्** अस्मदीयां भूमिम् **उक्षतं** सिञ्चतम्। **वां** युवां **प्रति** **अत्र** अस्मिल्ँलोके **वरम्** उत्कृष्टं हविः स्तोत्रं वा क **आ** यच्छेदिति शेषः । अतः केवलं कृपयैव **दिव्यस्य** दिवि भवस्य **चारोः** चरणीयस्थ उद्नः उदकस्य । कर्मणि षष्ठी । उक्तलक्षणमुदकं **पृणीतं** प्रयच्छतम् ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -1172,7 +1172,7 @@ Erfreut durch Opfer, Varuna und Mitra, besprengt mit Fett und Labetrunk die Wies
 </details>
 <details><summary>आर्यमुनि - पदार्थः</summary>
 
-पदार्थान्वयभाषाः -  (मित्रावरुणा) हे सर्वप्रिय तथा सर्ववरणीय शक्तिमन्परमात्मन् ! (नः) अस्माकं (हव्यजुष्टिं गव्यूतिम्) यज्ञभूमिं (आ) सम्यक्प्रकारेण (घृतैः, इळाभिः) घृतैस्तथा अन्नैश्च (उक्षतं) सिञ्चतं (वां प्रति) युवां प्रति अत्र अस्मिँल्लोके (वरं) उत्कृष्टम्, कार्य्यकारिणः (नः) अस्मान्प्रति (उद्नः) स्नेहस्य भावं (पृणीतं) प्रयच्छतु प्रत्यहं भवत इयमेव प्रार्थना यत् (दिव्यस्य चारोः) चरणशीलस्य द्युलोकस्य वयमव्याहतगतयो भवेम ॥४॥
+पदार्थान्वयभाषाः -  (मित्रावरुणा) हे सर्वप्रिय तथा सर्ववरणीय शक्तिमन्परमात्मन् ! (नः) अस्माकं (हव्यजुष्टिं गव्यूतिम्) यज्ञभूमिं (आ) सम्यक्प्रकारेण (घृतैः, इळाभिः) घृतैस्तथा अन्नैश्च (उक्षतं) सिञ्चतं (वां प्रति) युवां प्रति अत्र अस्मिल्ँलोके (वरं) उत्कृष्टम्, कार्य्यकारिणः (नः) अस्मान्प्रति (उद्नः) स्नेहस्य भावं (पृणीतं) प्रयच्छतु प्रत्यहं भवत इयमेव प्रार्थना यत् (दिव्यस्य चारोः) चरणशीलस्य द्युलोकस्य वयमव्याहतगतयो भवेम ॥४॥
 </details>
 </details>
 </div>
