--- a/shAkalam/saMhitA/sarva-prastutiH/09/113.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/09/113.md
@@ -2030,7 +2030,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-हे **पवमान** **यत्र** यस्मिँल्लोके **ज्योतिः** सर्वं तेजः **अजस्रं** सर्वदाविनश्वरं वर्तते । यस्मिन् च **लोके** **स्वः** आदित्याख्यं ज्योतिः **हितं** निहितमस्ति । **तस्मिन्** **अमृते** मरणधर्मरहिते अत एव **अक्षिते** अक्षीणे **लोके** मां सोमाभिषवं कुर्वन्तं **धेहि** निधेहि । तस्मात् मामुत्तमलोकं प्रापयितुं त्वम् इन्द्राय **पंरि** **स्रव** ॥
+हे **पवमान** **यत्र** यस्मिल्ँलोके **ज्योतिः** सर्वं तेजः **अजस्रं** सर्वदाविनश्वरं वर्तते । यस्मिन् च **लोके** **स्वः** आदित्याख्यं ज्योतिः **हितं** निहितमस्ति । **तस्मिन्** **अमृते** मरणधर्मरहिते अत एव **अक्षिते** अक्षीणे **लोके** मां सोमाभिषवं कुर्वन्तं **धेहि** निधेहि । तस्मात् मामुत्तमलोकं प्रापयितुं त्वम् इन्द्राय **पंरि** **स्रव** ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -2330,7 +2330,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**यत्र** यस्मिँल्लोके वैवस्वतः विवस्वत्पुत्रः **राजा** भवति । **यत्र** च लोके **दिवः** आदित्यस्य **अवरोधनं** भूतानां प्रवेशनम् । किंच यत्र लोके यह्वती: महत्यः **अमूः** इमा गङ्गाद्याः **आपः**। तिष्ठन्ति । तत्र तादृशे लोके **माममृतं** मरणधर्मरहितं कृधि कुरु । मम देवत्वं प्रापयेत्यर्थः । ततः कारणात् **परि** **स्रव** ॥
+**यत्र** यस्मिल्ँलोके वैवस्वतः विवस्वत्पुत्रः **राजा** भवति । **यत्र** च लोके **दिवः** आदित्यस्य **अवरोधनं** भूतानां प्रवेशनम् । किंच यत्र लोके यह्वती: महत्यः **अमूः** इमा गङ्गाद्याः **आपः**। तिष्ठन्ति । तत्र तादृशे लोके **माममृतं** मरणधर्मरहितं कृधि कुरु । मम देवत्वं प्रापयेत्यर्थः । ततः कारणात् **परि** **स्रव** ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -2624,7 +2624,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**यत्र** **त्रिदिवे** तृतीयस्थां दिवि द्युलोके **त्रिनाके** । तत्राधरमध्यमोत्तमभावेन त्रीणि स्थानानि सन्ति । तत्र तृतीये नाके उत्तमे स्थाने **दिवः** आदित्यस्य **अनुकामं** कामानुगुणं **चरणम्** अस्ति । किंच **यत्र** यस्मिँल्लोके **लोकाः** **ज्योतिष्मन्तः** ज्योतिर्युक्तास्तिष्ठन्ति । **तत्र** तादृशे लोके माममृतं **कृधि** । यथा ममोत्तमलोको भवति तथा त्वम् **इन्द्राय** **परि** **स्रव** ॥
+**यत्र** **त्रिदिवे** तृतीयस्थां दिवि द्युलोके **त्रिनाके** । तत्राधरमध्यमोत्तमभावेन त्रीणि स्थानानि सन्ति । तत्र तृतीये नाके उत्तमे स्थाने **दिवः** आदित्यस्य **अनुकामं** कामानुगुणं **चरणम्** अस्ति । किंच **यत्र** यस्मिल्ँलोके **लोकाः** **ज्योतिष्मन्तः** ज्योतिर्युक्तास्तिष्ठन्ति । **तत्र** तादृशे लोके माममृतं **कृधि** । यथा ममोत्तमलोको भवति तथा त्वम् **इन्द्राय** **परि** **स्रव** ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -2937,7 +2937,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**यत्र** यस्मिँल्लोके कामाः काम्यमाना देवाः **निकामाः** नितरामवश्यं प्रार्थ्यमाना इन्द्रादयः **च** विद्यन्ते । यद्वा कामा निकामा अभिलाषा निकामाश्च यत्र विद्यन्ते । **यत्र** लोके **ब्रध्नस्य** सर्वेषां प्रज्ञापकस्य । यद्वा । सूर्येण विना कर्माणि न घटन्त इति सर्वेषां कर्मणां मूलभूतस्यादित्यस्य **विष्टपं** सहस्थानं यत्र विद्यते तत्र लोके । **स्वधा** अन्नं स्वधाकारेण वा दत्तमन्नं **तृप्तिः** तर्पणं हर्षणं हर्षः **च** **यत्र** विद्यते **तत्र** लोके **माममृतं** कृधि ॥
+**यत्र** यस्मिल्ँलोके कामाः काम्यमाना देवाः **निकामाः** नितरामवश्यं प्रार्थ्यमाना इन्द्रादयः **च** विद्यन्ते । यद्वा कामा निकामा अभिलाषा निकामाश्च यत्र विद्यन्ते । **यत्र** लोके **ब्रध्नस्य** सर्वेषां प्रज्ञापकस्य । यद्वा । सूर्येण विना कर्माणि न घटन्त इति सर्वेषां कर्मणां मूलभूतस्यादित्यस्य **विष्टपं** सहस्थानं यत्र विद्यते तत्र लोके । **स्वधा** अन्नं स्वधाकारेण वा दत्तमन्नं **तृप्तिः** तर्पणं हर्षणं हर्षः **च** **यत्र** विद्यते **तत्र** लोके **माममृतं** कृधि ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -3262,7 +3262,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-यत्र यस्मिँल्लोके आनन्दादयः **आसते** । तेषामल्पो भेदो द्रष्टव्यः । **यत्र** च लोके **कामस्य** काम्यमानस्य देवस्य सर्वे **कामाः**। **आप्ताः** प्राप्त भवन्ति **तत्र** **माममृतं** **कृधि** । एतत्तु त्वया विना न घटत इति हे सोम एवं **परि** **स्रव** ॥ ॥ २७ ॥
+यत्र यस्मिल्ँलोके आनन्दादयः **आसते** । तेषामल्पो भेदो द्रष्टव्यः । **यत्र** च लोके **कामस्य** काम्यमानस्य देवस्य सर्वे **कामाः**। **आप्ताः** प्राप्त भवन्ति **तत्र** **माममृतं** **कृधि** । एतत्तु त्वया विना न घटत इति हे सोम एवं **परि** **स्रव** ॥ ॥ २७ ॥
 </details>
 <details><summary>Wilson</summary>
 
