--- a/shAkalam/saMhitA/sarva-prastutiH/10/018.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/018.md
@@ -2695,7 +2695,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**मृतस्य** क्षत्रियस्य **हस्तात्** **धनुः** **आददानः** । किमर्थम् । **अस्मे** अस्माकं **क्षत्राय** प्रजापालनसमर्थाय बलाय **वर्चसे** तेजसे **बलाय** सेनालक्षणाय च धनुराददानोऽहं ब्रवीमीति शेषः। किमिति । **त्वम्** **अत्रैव** अस्मिन् स्थान एव भव **वयं** च **इह** अस्मिँल्लोके **सुवीराः** सुपुत्रयुक्ता भवन्तः **विश्वाः** सर्वान् अभिमातीः अभिमन्यमानान् **स्पृधः** संघर्षयितॄन् बाधकान् शत्रून् **जयेम** सहेमहि ॥
+**मृतस्य** क्षत्रियस्य **हस्तात्** **धनुः** **आददानः** । किमर्थम् । **अस्मे** अस्माकं **क्षत्राय** प्रजापालनसमर्थाय बलाय **वर्चसे** तेजसे **बलाय** सेनालक्षणाय च धनुराददानोऽहं ब्रवीमीति शेषः। किमिति । **त्वम्** **अत्रैव** अस्मिन् स्थान एव भव **वयं** च **इह** अस्मिल्ँलोके **सुवीराः** सुपुत्रयुक्ता भवन्तः **विश्वाः** सर्वान् अभिमातीः अभिमन्यमानान् **स्पृधः** संघर्षयितॄन् बाधकान् शत्रून् **जयेम** सहेमहि ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -3556,7 +3556,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-पांसुभिः प्रच्छाद्यैनां पठन्ति । **उच्छ्वञ्चमाना** अस्थिकुम्भमवष्टभ्योर्ध्वं गच्छन्ती **पृथिवी** **सु** **तिष्ठतु** प्रतिष्ठिता भवतु । किंच **सहस्रं** सहस्रसंख्याकाः **मितः** प्रक्षिप्ताः ॥ मिनोतेरौणादिके कर्मणि क्विपि तुगागमः । ततो जस् । यद्वा । सहस्रम् । तृतीयार्थे प्रथमा । मित इति निष्ठान्तं रूपम् । व्यत्ययेन बहुवचनस्यैकवचनम् । स्वरो वृषादित्वाद्द्रष्टव्यः ॥ सहस्रेण संमिता बहुसंख्याकाः । पार्थिवाः पांसवः **उप** **श्रयन्ताम्** । एनमुपसेवन्ताम् । संपरिवार्यं तिष्ठन्त्वित्यर्थः । हिरवधारणे । तथा **ते** पांसवोऽस्मै **गृहासः** गृहा भवन्तः **घृतश्चुतः** घृतस्योदकस्य सर्पिषो वा क्षारयितारः **भवन्तु** । **अत्र** अस्मिँल्लोके **विश्वाहा** सर्वेष्वहःसु सर्वदा **अस्मै** अस्य **शरणाः** **सन्तु** आश्रयभूता भवन्तु ॥
+पांसुभिः प्रच्छाद्यैनां पठन्ति । **उच्छ्वञ्चमाना** अस्थिकुम्भमवष्टभ्योर्ध्वं गच्छन्ती **पृथिवी** **सु** **तिष्ठतु** प्रतिष्ठिता भवतु । किंच **सहस्रं** सहस्रसंख्याकाः **मितः** प्रक्षिप्ताः ॥ मिनोतेरौणादिके कर्मणि क्विपि तुगागमः । ततो जस् । यद्वा । सहस्रम् । तृतीयार्थे प्रथमा । मित इति निष्ठान्तं रूपम् । व्यत्ययेन बहुवचनस्यैकवचनम् । स्वरो वृषादित्वाद्द्रष्टव्यः ॥ सहस्रेण संमिता बहुसंख्याकाः । पार्थिवाः पांसवः **उप** **श्रयन्ताम्** । एनमुपसेवन्ताम् । संपरिवार्यं तिष्ठन्त्वित्यर्थः । हिरवधारणे । तथा **ते** पांसवोऽस्मै **गृहासः** गृहा भवन्तः **घृतश्चुतः** घृतस्योदकस्य सर्पिषो वा क्षारयितारः **भवन्तु** । **अत्र** अस्मिल्ँलोके **विश्वाहा** सर्वेष्वहःसु सर्वदा **अस्मै** अस्य **शरणाः** **सन्तु** आश्रयभूता भवन्तु ॥
 </details>
 <details><summary>Wilson</summary>
 
