--- a/shAkalam/saMhitA/sarva-prastutiH/10/032.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/032.md
@@ -559,7 +559,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-हे **इन्द्र** **दिव्यानि** दिवि भवानि **रोचना** रोचनानि दीप्तिस्वभावकानि ज्योतींषि यद्वा दिव्याँल्लोकान् वि **यासि** व्याप्नोषि । हे **पुरुष्टुत** बहुभिः स्तुतेन्द्र **पार्थिवानि** पृथिव्यां भवानि **रजसा** आत्मीयेन ज्योतिषा विद्युल्लक्षणेन । यद्वा । रजःशब्दाच्छस आकारः । पार्थिवाँल्लोकान् । व्याप्नोषि। **ये** त्वदीया अश्वाः **मुहुः** पुनः पुनः **अध्वरान्** अस्मदीयान् यज्ञान् प्रति **त्वा** त्वाम् **उप** **वहन्ति** समीपे प्रापयन्ति **ते** अश्वाः **वग्वनान्** वचनेन स्तुत्या संभक्तॄन् **अराधसः** धनरहितानस्मान् **सु** सुष्ठु **वन्वन्तु** धनप्रदानार्थं संभजन्ताम् ॥
+हे **इन्द्र** **दिव्यानि** दिवि भवानि **रोचना** रोचनानि दीप्तिस्वभावकानि ज्योतींषि यद्वा दिव्याल्ँलोकान् वि **यासि** व्याप्नोषि । हे **पुरुष्टुत** बहुभिः स्तुतेन्द्र **पार्थिवानि** पृथिव्यां भवानि **रजसा** आत्मीयेन ज्योतिषा विद्युल्लक्षणेन । यद्वा । रजःशब्दाच्छस आकारः । पार्थिवाल्ँलोकान् । व्याप्नोषि। **ये** त्वदीया अश्वाः **मुहुः** पुनः पुनः **अध्वरान्** अस्मदीयान् यज्ञान् प्रति **त्वा** त्वाम् **उप** **वहन्ति** समीपे प्रापयन्ति **ते** अश्वाः **वग्वनान्** वचनेन स्तुत्या संभक्तॄन् **अराधसः** धनरहितानस्मान् **सु** सुष्ठु **वन्वन्तु** धनप्रदानार्थं संभजन्ताम् ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -855,7 +855,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**वपुषः** । वपुः रूपम् । तद्वाँल्लक्ष्यते । वपुष्मतोऽपि **वपुष्टरं** रूपवत्तरमत्यन्तं सुरूपं **तत्** यज्ञकर्म **मे** मह्यं **छन्त्सत्** इन्द्रः कामयताम् । **यत्** यदा **पुत्रः** **जानं** जन्म आत्मन उत्पत्तिं **पित्रोः** मातापित्रोः सकाशात् **अधीयति** संकीर्तनद्वारेणाधिगच्छति । सुब्रह्मण्याह्वानकालेऽमुकशर्मणः पुत्रो यजत इत्यात्मनो जन्म संकीर्तयति । यद्वा । यज्जननादागतं धनं पित्रों: सकाशात्पुत्रोऽधिगच्छति तदेव मह्यमिच्छतु । **जाया** पत्नी **पतिं** यजमान **सुमत्** कल्याणेन **वग्नुना** वाग्रूपेण शब्देन **वहति** आत्मसमीपं प्रापयति । **भद्र** भजनीयः **परिष्कृतः** सुसंस्कृत: **पुंस** **इत**। पत्युरेवेत्यर्थः । **वहतुः** जायायै प्रदातव्यः । तदुक्तं-- सुभद्रमर्य भोजनं बिभर्षि ' (ऋ. सं. ८. १. ३४) इति । यद्वा । पुंसोऽतिशूरस्येन्द्रस्यार्थाय भद्रो भजनीयो वहतुर्वहनशीलो देवान् प्रति स सोमः परिष्कृतः संस्कृतो भवति । तदेन्द्रः कामयतामित्यर्थः ॥
+**वपुषः** । वपुः रूपम् । तद्वाल्ँलक्ष्यते । वपुष्मतोऽपि **वपुष्टरं** रूपवत्तरमत्यन्तं सुरूपं **तत्** यज्ञकर्म **मे** मह्यं **छन्त्सत्** इन्द्रः कामयताम् । **यत्** यदा **पुत्रः** **जानं** जन्म आत्मन उत्पत्तिं **पित्रोः** मातापित्रोः सकाशात् **अधीयति** संकीर्तनद्वारेणाधिगच्छति । सुब्रह्मण्याह्वानकालेऽमुकशर्मणः पुत्रो यजत इत्यात्मनो जन्म संकीर्तयति । यद्वा । यज्जननादागतं धनं पित्रों: सकाशात्पुत्रोऽधिगच्छति तदेव मह्यमिच्छतु । **जाया** पत्नी **पतिं** यजमान **सुमत्** कल्याणेन **वग्नुना** वाग्रूपेण शब्देन **वहति** आत्मसमीपं प्रापयति । **भद्र** भजनीयः **परिष्कृतः** सुसंस्कृत: **पुंस** **इत**। पत्युरेवेत्यर्थः । **वहतुः** जायायै प्रदातव्यः । तदुक्तं-- सुभद्रमर्य भोजनं बिभर्षि ' (ऋ. सं. ८. १. ३४) इति । यद्वा । पुंसोऽतिशूरस्येन्द्रस्यार्थाय भद्रो भजनीयो वहतुर्वहनशीलो देवान् प्रति स सोमः परिष्कृतः संस्कृतो भवति । तदेन्द्रः कामयतामित्यर्थः ॥
 </details>
 <details><summary>Wilson</summary>
 
