--- a/shAkalam/saMhitA/sarva-prastutiH/01/032.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/032.md
@@ -4493,7 +4493,7 @@ Wen sahst du, Indra, als des Drachens Rächer, als dir dem Sieger damals Furcht 
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - विषयः</summary>
 
-(अहेः) मेघस्य (यातारम्) देशान्तरे प्रापयितारम् (कम्) सूर्यादन्यम् (अपश्यः) पश्येत्। अत्र लिङर्थे लङ्। (इन्द्र) शत्रुदलविदारक योद्धः (हृदि) हृदये (यत्) धनम् (ते) तव (जघ्नुषः) हन्तुः सकाशात् (भीः) भयम् (अगच्छत्) गच्छति प्राप्नोति। अत्र सर्वत्र वर्त्तमाने लङ्। (नव) संख्यार्थे (च) पुनरर्थे (स्रवन्तीः) गमनं कुर्वन्तीर्नदीर्नाड़ीर्वा। स्रवन्त्य इति नदीनामसु पठितम्। निघं० १।१३। स्रुधातोर्गत्यर्थत्वाद्रुधिरप्राणगमनमार्गा जीवनहेतवो नाड्योपि गृह्यन्ते। (श्येनः) पक्षी (न) इव (भीतः) भयं प्राप्तः (अतरः) तरति (रजांसि) सर्वाँल्लोकान् लोकारजांस्युच्यंते। निरु० ४।१९। ॥१४॥
+(अहेः) मेघस्य (यातारम्) देशान्तरे प्रापयितारम् (कम्) सूर्यादन्यम् (अपश्यः) पश्येत्। अत्र लिङर्थे लङ्। (इन्द्र) शत्रुदलविदारक योद्धः (हृदि) हृदये (यत्) धनम् (ते) तव (जघ्नुषः) हन्तुः सकाशात् (भीः) भयम् (अगच्छत्) गच्छति प्राप्नोति। अत्र सर्वत्र वर्त्तमाने लङ्। (नव) संख्यार्थे (च) पुनरर्थे (स्रवन्तीः) गमनं कुर्वन्तीर्नदीर्नाड़ीर्वा। स्रवन्त्य इति नदीनामसु पठितम्। निघं० १।१३। स्रुधातोर्गत्यर्थत्वाद्रुधिरप्राणगमनमार्गा जीवनहेतवो नाड्योपि गृह्यन्ते। (श्येनः) पक्षी (न) इव (भीतः) भयं प्राप्तः (अतरः) तरति (रजांसि) सर्वाल्ँलोकान् लोकारजांस्युच्यंते। निरु० ४।१९। ॥१४॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
@@ -4830,7 +4830,7 @@ Was geht und steht, beherrscht als König Indra, das arbeitsame Vieh und das geh
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - विषयः</summary>
 
-(इन्द्रः) सूर्यलोक इव सभासेनापती राज्यं प्राप्तः (यातः) गमनादिव्यवहारप्रापकः (अवऽसितस्य) निश्चितस्य चराचरस्य जगतः (राजा) यो राजते दीप्यते प्रकाशते सः (शमस्य) शाम्यन्ति येन तस्य शान्तियुक्तस्य मनुष्यस्य (च) समुच्चये (शृङ्गिणः) शृङ्गयुक्तस्य गवादेः पशुसमूहस्य (वज्रबाहुः) वज्रः शस्त्रसमूहो बाहौ यस्य सः (सः) (इत्) एव (उ) अप्यर्थे (राजा) न्यायप्रकाशकः सभाध्यक्षः (क्षयति) निवासयति गमयति वा (चर्षणीनाम्) मनुष्याणाम्। (अरान्) चक्रावयवान् (न) इव (नेमिः) रथाङ्गम् (परि) सर्वतोऽर्थे (ता) तानि यानि जगतो दुष्टानि कर्माणि पूर्वोक्ताँल्लोकान्वा। अत्र शेश्छन्दसि बहुलम् इति शेर्लोपः। (बभूव) भवेः। अत्र लिङर्थे लिट् ॥१५॥
+(इन्द्रः) सूर्यलोक इव सभासेनापती राज्यं प्राप्तः (यातः) गमनादिव्यवहारप्रापकः (अवऽसितस्य) निश्चितस्य चराचरस्य जगतः (राजा) यो राजते दीप्यते प्रकाशते सः (शमस्य) शाम्यन्ति येन तस्य शान्तियुक्तस्य मनुष्यस्य (च) समुच्चये (शृङ्गिणः) शृङ्गयुक्तस्य गवादेः पशुसमूहस्य (वज्रबाहुः) वज्रः शस्त्रसमूहो बाहौ यस्य सः (सः) (इत्) एव (उ) अप्यर्थे (राजा) न्यायप्रकाशकः सभाध्यक्षः (क्षयति) निवासयति गमयति वा (चर्षणीनाम्) मनुष्याणाम्। (अरान्) चक्रावयवान् (न) इव (नेमिः) रथाङ्गम् (परि) सर्वतोऽर्थे (ता) तानि यानि जगतो दुष्टानि कर्माणि पूर्वोक्ताल्ँलोकान्वा। अत्र शेश्छन्दसि बहुलम् इति शेर्लोपः। (बभूव) भवेः। अत्र लिङर्थे लिट् ॥१५॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
@@ -4838,7 +4838,7 @@ Was geht und steht, beherrscht als König Indra, das arbeitsame Vieh und das geh
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  अत्रोपमालङ्कारः। अत्र पूर्वमन्त्रात् रजांसीति पदमनुवर्त्तते। राजा यथा रथचक्रमरान् धृत्वा चालयति यथायं सूर्य्यश्चराचरस्य शान्ताशान्तस्य जगतो मध्ये प्रकाशमानः सन् सर्वाँल्लोकान् धरन् स्वस्वकक्षासु चालयति न चैतस्माद्विना कस्यचित्संनिहितस्य मूर्त्तिमतो लोकस्य धारणाकर्षणप्रकाशमेघवर्षणादीनि कर्माणि संभवितुमर्हन्ति तथा धर्मेण राज्यं पालयेत् ॥१५॥ अत्रेन्द्रवृत्रयुद्धालङ्कारवर्णनेनास्य पूर्वसूक्तोक्ताग्निशब्दार्थेन सह संगतिरस्तीति वेदितव्यम् ॥  इति प्रथमस्य द्वितीयेऽष्टात्रिंशो वर्गः ३८ प्रथम मण्डले सप्तमेऽनुवाके द्वात्रिंशं च सूक्तमध्यायश्च द्वितीयः समाप्तः ॥२॥ श्रीमत्परिव्राजकाचार्य श्रीविरजानन्दसरस्वतीस्वामिनांशिष्येण दयानन्दसरस्वतीस्वामिनाविरचिते संस्कृत भाषार्थ भाषाभ्यां विभूषिते सुप्रमाणयुक्त ऋग्वेदभाष्ये द्वितीयोऽध्यायः पूर्त्तिमगमत् ॥२॥
+भावार्थभाषाः -  अत्रोपमालङ्कारः। अत्र पूर्वमन्त्रात् रजांसीति पदमनुवर्त्तते। राजा यथा रथचक्रमरान् धृत्वा चालयति यथायं सूर्य्यश्चराचरस्य शान्ताशान्तस्य जगतो मध्ये प्रकाशमानः सन् सर्वाल्ँलोकान् धरन् स्वस्वकक्षासु चालयति न चैतस्माद्विना कस्यचित्संनिहितस्य मूर्त्तिमतो लोकस्य धारणाकर्षणप्रकाशमेघवर्षणादीनि कर्माणि संभवितुमर्हन्ति तथा धर्मेण राज्यं पालयेत् ॥१५॥ अत्रेन्द्रवृत्रयुद्धालङ्कारवर्णनेनास्य पूर्वसूक्तोक्ताग्निशब्दार्थेन सह संगतिरस्तीति वेदितव्यम् ॥  इति प्रथमस्य द्वितीयेऽष्टात्रिंशो वर्गः ३८ प्रथम मण्डले सप्तमेऽनुवाके द्वात्रिंशं च सूक्तमध्यायश्च द्वितीयः समाप्तः ॥२॥ श्रीमत्परिव्राजकाचार्य श्रीविरजानन्दसरस्वतीस्वामिनांशिष्येण दयानन्दसरस्वतीस्वामिनाविरचिते संस्कृत भाषार्थ भाषाभ्यां विभूषिते सुप्रमाणयुक्त ऋग्वेदभाष्ये द्वितीयोऽध्यायः पूर्त्तिमगमत् ॥२॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
