--- a/shAkalam/saMhitA/sarva-prastutiH/02/013.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/02/013.md
@@ -2430,7 +2430,7 @@ Der auf der Trift du, was erblüht und Samen trägt, und Bäche auch vertheiltes
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
-पदार्थान्वयभाषाः -  (यः) (पुष्पिणीः) बहूनि पुष्पाणि यासु ताः (च) (प्रस्वः) प्रसावित्रीः (च) (धर्मणा) धर्मेण (अधि) उपरिभावे (दाने) दीयते येन तस्मिन् (वि) विशेषेण (अवनीः) पृथिवीः (अधारयः) धरति (यः) (च) (असमाः) असदृशीः (अजनः) जनयति (दिद्युतः) तडितः (दिवः) प्रकाशमयाँल्लोकान् (उरुः) बहुशक्तिः (ऊर्वान्) विनश्वरान् पदार्थान् (अभितः) (सः) (असि) (उक्थ्यः) ॥७॥
+पदार्थान्वयभाषाः -  (यः) (पुष्पिणीः) बहूनि पुष्पाणि यासु ताः (च) (प्रस्वः) प्रसावित्रीः (च) (धर्मणा) धर्मेण (अधि) उपरिभावे (दाने) दीयते येन तस्मिन् (वि) विशेषेण (अवनीः) पृथिवीः (अधारयः) धरति (यः) (च) (असमाः) असदृशीः (अजनः) जनयति (दिद्युतः) तडितः (दिवः) प्रकाशमयाल्ँलोकान् (उरुः) बहुशक्तिः (ऊर्वान्) विनश्वरान् पदार्थान् (अभितः) (सः) (असि) (उक्थ्यः) ॥७॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
@@ -2760,7 +2760,7 @@ Der du für Prikscha und für Dasaveca auch, zu tilgen auszogst Narmara mit sein
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
-भावार्थभाषाः -  ये राजजना भृत्यान् सेवकांश्चेष्टं भोजनादिकं दत्वा नन्दयन्ति ते स्तुतिभाजो भूत्वा बहून् भोगाँल्लभन्ते ॥८॥
+भावार्थभाषाः -  ये राजजना भृत्यान् सेवकांश्चेष्टं भोजनादिकं दत्वा नन्दयन्ति ते स्तुतिभाजो भूत्वा बहून् भोगाल्ँलभन्ते ॥८॥
 </details>
 <details><summary>सविता जोशी ← दयानन्द-सरस्वती (म) - भावार्थः</summary>
 
