--- a/shAkalam/saMhitA/sarva-prastutiH/05/032.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/05/032.md
@@ -2421,7 +2421,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**उग्रः** उद्गूर्णबलः इन्द्रः **महि** महान्तं **त्यं** **चित्** तमेव वृत्रम् **आदत्** आददौ प्रत्यग्रहीत् । कीदृशम् । **अर्णं** गन्तारं जलं मेघं वावृत्य **शयानं** शयनं कुर्वन्तम् । स्थितवन्तमित्यर्थः । **मधुपं** मधुनोऽम्भसः पातारं पालयितारम् **असिन्वं** सपत्नानवक्षेप्तारम् ॥ अस्यतेरिदं रूपम् ॥ **वव्रं** वृण्वन्तं सर्वमप्याच्छादयन्तम् । स इमाँल्लोकानवृणोद्यदिमाँल्लोकानवृणोत्तद्वृत्रस्य  वृत्रत्वम् । ( तै. सं. २. ५. २. २ ) इति हि तैत्तिरीयकम् । तदनन्तरमिन्द्रः **दुर्योणे** संग्रामे **महता** प्रभूतेन **वधेन** वज्रेण **अपादं** पादरहितम् अमत्रम् अमात्रं परिमाणरहितं **मृध्रवाचं** हिंसितवागिन्द्रियम् । जृम्भाभिभूतमित्यर्थः। वृत्रं **नि** **अवृणक्** नितरामहिंसीत् । तस्माज्जञ्जभ्यमानादग्नीषोमौ निरक्रामतां प्राणापानौ वा एनं तदजहिताम् ' ( तै. सं. २. ५. २. ४ ) इति हि तैत्तिरीयकम् ॥
+**उग्रः** उद्गूर्णबलः इन्द्रः **महि** महान्तं **त्यं** **चित्** तमेव वृत्रम् **आदत्** आददौ प्रत्यग्रहीत् । कीदृशम् । **अर्णं** गन्तारं जलं मेघं वावृत्य **शयानं** शयनं कुर्वन्तम् । स्थितवन्तमित्यर्थः । **मधुपं** मधुनोऽम्भसः पातारं पालयितारम् **असिन्वं** सपत्नानवक्षेप्तारम् ॥ अस्यतेरिदं रूपम् ॥ **वव्रं** वृण्वन्तं सर्वमप्याच्छादयन्तम् । स इमाल्ँलोकानवृणोद्यदिमाल्ँलोकानवृणोत्तद्वृत्रस्य  वृत्रत्वम् । ( तै. सं. २. ५. २. २ ) इति हि तैत्तिरीयकम् । तदनन्तरमिन्द्रः **दुर्योणे** संग्रामे **महता** प्रभूतेन **वधेन** वज्रेण **अपादं** पादरहितम् अमत्रम् अमात्रं परिमाणरहितं **मृध्रवाचं** हिंसितवागिन्द्रियम् । जृम्भाभिभूतमित्यर्थः। वृत्रं **नि** **अवृणक्** नितरामहिंसीत् । तस्माज्जञ्जभ्यमानादग्नीषोमौ निरक्रामतां प्राणापानौ वा एनं तदजहिताम् ' ( तै. सं. २. ५. २. ४ ) इति हि तैत्तिरीयकम् ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -2737,7 +2737,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**अस्य** इन्द्रस्य संबन्धिनीं **शुष्मं** शोषणीं **तविषीं** बलं **कः** **वराते** निवारयेत् ॥ शुष्मशब्दस्य स्त्रीलिङ्गविशेषणत्वेऽपि नियतलिङ्गत्वात् पुँल्लिङ्गत्वमेव ॥ **अप्रतीतः** केनाप्यप्रतिगत इन्द्रः **एकः** असहाय एव **धना** धनानि शत्रूणां वसूनि **भरते** बिभर्ति हरते वा । **देवी** देव्यौ द्योतमाने **इमे** **चित्** एव द्यावापृथिव्यौ **ज्रयसः** वेगवतः अस्य **इन्द्रस्य** संबन्धिनः **ओजसः** बलादुद्भूतेन **भियसा** भयेन **नु** क्षिप्रं **जिहाते** गच्छतः । चलत इत्यर्थः ॥
+**अस्य** इन्द्रस्य संबन्धिनीं **शुष्मं** शोषणीं **तविषीं** बलं **कः** **वराते** निवारयेत् ॥ शुष्मशब्दस्य स्त्रीलिङ्गविशेषणत्वेऽपि नियतलिङ्गत्वात् पुल्ँलिङ्गत्वमेव ॥ **अप्रतीतः** केनाप्यप्रतिगत इन्द्रः **एकः** असहाय एव **धना** धनानि शत्रूणां वसूनि **भरते** बिभर्ति हरते वा । **देवी** देव्यौ द्योतमाने **इमे** **चित्** एव द्यावापृथिव्यौ **ज्रयसः** वेगवतः अस्य **इन्द्रस्य** संबन्धिनः **ओजसः** बलादुद्भूतेन **भियसा** भयेन **नु** क्षिप्रं **जिहाते** गच्छतः । चलत इत्यर्थः ॥
 </details>
 <details><summary>Wilson</summary>
 
