--- a/shAkalam/saMhitA/sarva-prastutiH/10/001.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/001.md
@@ -275,7 +275,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**बृहन्** महानेषोऽग्निः उषसाम् अग्रे उषसामुपर्युषःकाले **ऊर्ध्वः** प्रज्वलितः सन् ज्वालारूपेण **अस्थात्** तिष्ठति। ततः **तमसः**। रात्रिनामैतत् । रात्रेः **निर्जगन्वान्** निर्गतः ॥ गमेः क्वसाविडभावे रूपम् ॥ निगतो निष्क्रान्तवान् सोऽग्निः **ज्योतिषा** स्वीयेन तेजसा लक्षितः सन् **आगात्** । गार्हपत्याद्विह्रियमाण आहवनीयं प्रत्यागच्छति । अनन्तरं **स्वङ्गः** शोभनज्वालावयवः **जातः** कर्मार्थं समुत्पन्न एषः **अग्निः** **रुशता**। रोचतेर्ज्वलतिकर्मण इदं रूपम् । आरोचमानेन । यद्वा । रुशतिर्हिंसार्थः। तमसां हिंसकेन । **भानुना** तेजसा विश्वा **सद्मानि** सर्वाँल्लोकान् यद्वा सदनानि यज्ञगृहाणि **आ** **अप्राः** आपूरयति । ‘प्रा पूरणे'।' तिङां तिङो भवन्ति' इति तिपः सिबादेशः । अत्र वाजसनेयकम्-‘अग्रे बृहन्नुषसामूर्ध्वो अस्थादित्यग्रे ह्येष बृहन्नुषसामूर्ध्वस्तिष्ठति । निर्जगन्वान्तमसो ज्योतिषागादिति निर्जगन्वान् रात्रेस्तमसो ज्योतिषैति । अग्निर्भानुना रुशता स्वङ्ग इत्यग्निर्वा एष भानुना रुशता स्वङ्ग आ जातो विश्वा सद्मान्यप्रा इतीमे वै लोका विश्वा सद्मानि तानेष जात आपूरयति' (श. ब्रा. ६. ७. ३. १०) इति ॥
+**बृहन्** महानेषोऽग्निः उषसाम् अग्रे उषसामुपर्युषःकाले **ऊर्ध्वः** प्रज्वलितः सन् ज्वालारूपेण **अस्थात्** तिष्ठति। ततः **तमसः**। रात्रिनामैतत् । रात्रेः **निर्जगन्वान्** निर्गतः ॥ गमेः क्वसाविडभावे रूपम् ॥ निगतो निष्क्रान्तवान् सोऽग्निः **ज्योतिषा** स्वीयेन तेजसा लक्षितः सन् **आगात्** । गार्हपत्याद्विह्रियमाण आहवनीयं प्रत्यागच्छति । अनन्तरं **स्वङ्गः** शोभनज्वालावयवः **जातः** कर्मार्थं समुत्पन्न एषः **अग्निः** **रुशता**। रोचतेर्ज्वलतिकर्मण इदं रूपम् । आरोचमानेन । यद्वा । रुशतिर्हिंसार्थः। तमसां हिंसकेन । **भानुना** तेजसा विश्वा **सद्मानि** सर्वाल्ँलोकान् यद्वा सदनानि यज्ञगृहाणि **आ** **अप्राः** आपूरयति । ‘प्रा पूरणे'।' तिङां तिङो भवन्ति' इति तिपः सिबादेशः । अत्र वाजसनेयकम्-‘अग्रे बृहन्नुषसामूर्ध्वो अस्थादित्यग्रे ह्येष बृहन्नुषसामूर्ध्वस्तिष्ठति । निर्जगन्वान्तमसो ज्योतिषागादिति निर्जगन्वान् रात्रेस्तमसो ज्योतिषैति । अग्निर्भानुना रुशता स्वङ्ग इत्यग्निर्वा एष भानुना रुशता स्वङ्ग आ जातो विश्वा सद्मान्यप्रा इतीमे वै लोका विश्वा सद्मानि तानेष जात आपूरयति' (श. ब्रा. ६. ७. ३. १०) इति ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -906,7 +906,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**विद्वान्** जानाना जातः प्रादुर्भूतः **बृहन्** महान् विष्णुः **इत्था** इत्थमनेन प्रकारेण विष्णुः स्थापनशीलो ज्ञानादिगुणयुक्तोऽग्निः **अस्य** इमं **तृतीयं** त्रयाणां पूरकं त्रितं माम् **अभि** **पाति** अभिरक्षतु । 'एकतो द्वितस्त्रित इति त्रयो बभूवुः' (निरु. ४. ६) इति यास्केनोक्तम् । किंच **अस्य** अग्नेः **स्वम्** आत्मीयं पयः उदकम् **आसा** आस्येन **यत्** यदा **अक्रत** कुर्वन्ति यजमाना याचन्ते तदानीम् **अत्र** अस्मिँल्लोके स्थिताः स्तोतरः सचेतसः समानमनस्का भूत्वैनम् **अभ्यर्चन्ति** अभिष्टुवन्ति ॥
+**विद्वान्** जानाना जातः प्रादुर्भूतः **बृहन्** महान् विष्णुः **इत्था** इत्थमनेन प्रकारेण विष्णुः स्थापनशीलो ज्ञानादिगुणयुक्तोऽग्निः **अस्य** इमं **तृतीयं** त्रयाणां पूरकं त्रितं माम् **अभि** **पाति** अभिरक्षतु । 'एकतो द्वितस्त्रित इति त्रयो बभूवुः' (निरु. ४. ६) इति यास्केनोक्तम् । किंच **अस्य** अग्नेः **स्वम्** आत्मीयं पयः उदकम् **आसा** आस्येन **यत्** यदा **अक्रत** कुर्वन्ति यजमाना याचन्ते तदानीम् **अत्र** अस्मिल्ँलोके स्थिताः स्तोतरः सचेतसः समानमनस्का भूत्वैनम् **अभ्यर्चन्ति** अभिष्टुवन्ति ॥
 </details>
 <details><summary>Wilson</summary>
 
