--- a/shAkalam/saMhitA/sarva-prastutiH/10/085.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/085.md
@@ -945,7 +945,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-हे **सोम** **आच्छद्विधानैः** । आच्छादयन्ति विधानानि येषां विद्यन्ते त आच्छद्विधानाः । तैः **गुपितः** । तथा **बार्हतैः** गुपितः स्वानभ्राजाङ्घार्यादिभिः सप्तभिः सोमपालैः रक्षितः त्वम् । एते वा अमुष्मिँल्लोके सोममरक्षन् ' (तै. सं. ६.१.१०.५) इति ब्राह्मणम् । **ग्राव्णामिच्छृण्वन्** अभिषवग्राव्णां ध्वनिं शृण्वन्नेव **तिष्ठसि** । **ते** त्वां **पार्थिवः** पार्थिवो जनः **न** **अश्नाति** । न हि द्युस्थश्चन्द्ररूपः सोमोऽत्रत्यैः पानयोग्यो भवति । चन्द्रमा वै सोमो देवानामन्नं तं पौर्णमास्यामभिषुण्वन्ति' (श. ब्रा. ११.१.५.३ ) इति वाजसनेयकम् ॥
+हे **सोम** **आच्छद्विधानैः** । आच्छादयन्ति विधानानि येषां विद्यन्ते त आच्छद्विधानाः । तैः **गुपितः** । तथा **बार्हतैः** गुपितः स्वानभ्राजाङ्घार्यादिभिः सप्तभिः सोमपालैः रक्षितः त्वम् । एते वा अमुष्मिल्ँलोके सोममरक्षन् ' (तै. सं. ६.१.१०.५) इति ब्राह्मणम् । **ग्राव्णामिच्छृण्वन्** अभिषवग्राव्णां ध्वनिं शृण्वन्नेव **तिष्ठसि** । **ते** त्वां **पार्थिवः** पार्थिवो जनः **न** **अश्नाति** । न हि द्युस्थश्चन्द्ररूपः सोमोऽत्रत्यैः पानयोग्यो भवति । चन्द्रमा वै सोमो देवानामन्नं तं पौर्णमास्यामभिषुण्वन्ति' (श. ब्रा. ११.१.५.३ ) इति वाजसनेयकम् ॥
 </details>
 <details><summary>Wilson</summary>
 
@@ -10969,7 +10969,7 @@ _________
 </details>
 <details><summary>सायण-भाष्यम्</summary>
 
-**इहैव** **स्तम्** इहैवास्मिँल्लोके स्तं भवतम् । **मा** **वियौष्टं** मा पृथग्भूतम् । विश्वमायुर्व्यश्नुतं प्राप्नुतम् । किंच **पुत्रैर्नप्तृभिः** पौत्रैः सह **स्वे** **गृहे** **मोदमानौ** भवतमिति शेषः ॥
+**इहैव** **स्तम्** इहैवास्मिल्ँलोके स्तं भवतम् । **मा** **वियौष्टं** मा पृथग्भूतम् । विश्वमायुर्व्यश्नुतं प्राप्नुतम् । किंच **पुत्रैर्नप्तृभिः** पौत्रैः सह **स्वे** **गृहे** **मोदमानौ** भवतमिति शेषः ॥
 </details>
 <details><summary>Wilson</summary>
 
