--- a/shAkalam/saMhitA/sarva-prastutiH/01/053.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/053.md
@@ -25,7 +25,7 @@ Indra
 </div>
 
 
-## 01 न्यूथ् षु - जगती
+## 01 न्यूत् षु - जगती
 <div class="js_include" newlevelforh1="5" title="विश्वास-प्रस्तुतिः" unfilled url="/vedAH_Rk/shAkalam/saMhitA/vishvAsa-prastutiH/01/053/01_nyU3_Shu.md">
 <details open><summary><h3>विश्वास-प्रस्तुतिः ...{Loading}...</h3></summary>
 
